# player-try

./: CMakeLists.txt
cmake/: copy_target_dep.cmake
dep/: SDL2.rar
src/: CMakeLists.txt  Frame.cpp  Frame.h  FrameQueue.cpp  FrameQueue.h  Packet.cpp  Packet.h  PacketQueue.cpp  PacketQueue.h  Player.cpp  Player.h  main.cpp
